--- a/Number Guessing/index.html
+++ b/Number Guessing/index.html
@@ -37,12 +37,20 @@
     </div>
 
     <div class="box04">
-        <h1>Guess the number</h1>
+        <h1></h1>
+        <p>Guess the number Betweem 0 to 9</p>
+        <h3>chance left 5</h3>
         <div class="myinput">
             <input type="text" placeholder="Guess the number">
             <p class="error04"></p>
         </div>
         <button>Submit</button>
+    </div>
+
+    <div class="box05">
+        <h1></h1>
+        <p></p>
+        
     </div>
 
     <script src="script.js"></script>
