--- a/Todo/index.html
+++ b/Todo/index.html
@@ -10,6 +10,7 @@
      <input type="text" class="input">
      <button class="button">submit</button>
      <ul class="ul"></ul>
+     <button class="deletedall">deleted</button>
     <script src="script.js"></script>
 </body>
 </html>
